--- a/styles.scss
+++ b/styles.scss
@@ -1,8 +1,18 @@
 .translation {
-  height: 300px;
-  width: 800px;
-  border: 2px solid black;
   &__header {
     font-size: 60px;
+  }
+  &__input-text {
+    height: 150px;
+    width: 300px;
+    font-size: 25px;
+  }
+  &__output-text {
+    height: 150px;
+    width: 300px;
+    font-size: 25px;
+  }
+  &__button {
+    font-size: 25px;
   }
 }
