--- a/styles.scss
+++ b/styles.scss
@@ -30,12 +30,11 @@ body {
     }
     &__box {
         display: flex;
-        flex-direction: column;
         justify-content: center;
 
         &--button {
             font-size: 25px;
-            margin-left: 200px;
+            width: 200px;
             margin-bottom: 10px;
         }
         &--button:hover {
